2006-11-04  Doug Hellmann  <dhellmann@racemi.com>

	* static/js/oneoffcast/user.js (do_add_to_queue): If we do not
	have an entry link for the item, use the enclosure link instead so
	there is *some* value.
	(populate_feed_viewer): Only show a link to the "item" if we have
	an item link.

	* static/js/oneoffcast/user.js
	(do_remove_feed): Initiate the calls to remove the feed from the
	list of subsccriptions for the user.

	* static/css/site.css (sidebar_r): Change float to right and
	increase the width to 24% to take up more of the available space.

2006-10-29  Doug Hellmann  <dhellmann@racemi.com>

	* static/js/oneoffcast/user.js (get_mimetype_icon): Function to
	produce a DOM node to be inserted as the icon based on a mimetype.
	(insert_entry_into_queue): Replace the text mimetype with an icon.
	Add an icon for removing the thing from the queue, but it is not
	functional yet.
	(populate_feed_viewer): Add an icon to link directly to the
	enclosure.
	(insert_entry_into_queue): Links to remote items in the queue open
	in a new window.
	(do_remove_from_queue): Start the process of removing something
	from the queue.
	(remove_item_from_queue): Update the queue display by removing the
	specified item.
	(remove_from_queue_callback): AJAX callback invoked when the
	server finishes removing something from the queue.

	* static/images/cancel.png: New image to be used for delete links.

	* static/images/sound.png: New image for use when showing a link
	to an audio podcast.

	* static/images/film.png: New image for use when showing a link
	to a video podcast.

	* static/css/site.css (queue_item): Allow the margin and padding
	to apply around the entire item.  Add a border.
	(queue_item enclosure_link): Do not reduce the font size.  We are
	using icons most of the time now anyway.
	(queue_item delete_link): New class for the delete icon.
	(podcast_entry img): Do not add padding to the right side of the
	icon.
	(podcast_entry add_link): New class for the link to add the